--- a/requirements.txt
+++ b/requirements.txt
@@ -1,16 +1,35 @@
-django-heroku==0.3.1
-Django==2.1.1
-channels==2.2.0
-gunicorn==20.0.4
-Pillow==8.1.0
-asgiref==3.3.1
-dj-database-url==0.5.0
-dj-static==0.0.6
-pytz==2020.5
-sqlparse==0.4.1
-static3==0.7.0
-psycopg2_binary==2.8.6
-boto3==1.16
+asgiref==3.4.1
+attrs==21.2.0
+autobahn==21.11.1
+Automat==20.2.0
+boto3==1.20.25
+botocore==1.23.25
+cffi==1.15.0
+channels==3.0.4
+constantly==15.1.0
+cryptography==36.0.1
+daphne==3.0.2
+Django==4.0
 django-mathfilters==1.0.0
-channels-redis
-supervisor
+hyperlink==21.0.0
+idna==3.3
+incremental==21.3.0
+jmespath==0.10.0
+Pillow==8.4.0
+pyasn1==0.4.8
+pyasn1-modules==0.2.8
+pycparser==2.21
+pyOpenSSL==21.0.0
+python-dateutil==2.8.2
+pytz==2021.3
+s3transfer==0.5.0
+service-identity==21.1.0
+six==1.16.0
+sqlparse==0.4.2
+Twisted==21.7.0
+twisted-iocpsupport==1.0.2
+txaio==21.2.1
+typing_extensions==4.0.1
+tzdata==2021.5
+urllib3==1.26.7
+zope.interface==5.4.0
